# clawreform

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MIGRATION.md  PORTING_SCOPE.md  README.md  SECURITY.md  clawreform.toml.example  docker-compose.yml  migration_report.md  prd.json  secrets.env  soul.md
.github/workflows/: ci.yml  release.yml
agents/analyst/: agent.toml
agents/architect/: agent.toml
agents/assistant/: agent.toml
agents/code-reviewer/: agent.toml
agents/coder/: agent.toml
agents/customer-support/: agent.toml
agents/data-scientist/: agent.toml
agents/debugger/: agent.toml
agents/devops-lead/: agent.toml
agents/doc-writer/: agent.toml
agents/email-assistant/: agent.toml
agents/health-tracker/: agent.toml
agents/hello-world/: agent.toml
agents/home-automation/: agent.toml
agents/legal-assistant/: agent.toml
agents/meeting-assistant/: agent.toml
agents/ops/: agent.toml
agents/orchestrator/: agent.toml
agents/personal-finance/: agent.toml
agents/planner/: agent.toml
agents/recruiter/: agent.toml
agents/researcher/: agent.toml
agents/sales-assistant/: agent.toml
agents/security-auditor/: agent.toml
agents/social-media/: agent.toml
agents/test-engineer/: agent.toml
agents/translator/: agent.toml
agents/travel-planner/: agent.toml
agents/tutor/: agent.toml
agents/writer/: agent.toml
assets/marketing/: blog-post.md  feature-comparison.md  hacker-news-post.md  linkedin-article.md  newsletter-email.md  one-pager.md  pitch-deck.md  press-release.md  product-hunt-launch.md  readme-additions.md  reddit-post.md  twitter-thread-extended.md
assets/social/: bio.md  skool-intro.md  x-intro.md  x-thread-2.md  x-thread-3.md
clipmart/: content-agency.toml  research-lab.toml  saas-startup.toml
crates/clawreform-api/: Cargo.toml
crates/clawreform-api/src/: channel_bridge.rs  lib.rs  middleware.rs  openai_compat.rs  routes.rs  self_modify_routes.rs  server.rs  types.rs  webchat.rs  ws.rs
crates/clawreform-api/static/: index_body.html  index_head.html
crates/clawreform-api/static/css/: components.css  layout.css  theme.css
crates/clawreform-api/static/js/: api.js  app.js
crates/clawreform-api/static/js/pages/: agentdna.js  agents.js  approvals.js  channels.js  chat.js  collective.js  company.js  hands.js  logs.js  memory-layers.js  organism.js  overview.js  scheduler.js  sessions.js  settings.js  skills.js  usage.js  wizard.js  workflow-builder.js  workflows.js
crates/clawreform-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs
crates/clawreform-channels/: Cargo.toml
crates/clawreform-channels/src/: bluesky.rs  bridge.rs  dingtalk.rs  discord.rs  discourse.rs  email.rs  feishu.rs  flock.rs  formatter.rs  gitter.rs  google_chat.rs  gotify.rs  guilded.rs  irc.rs  keybase.rs  lib.rs  line.rs  linkedin.rs  mastodon.rs  matrix.rs  mattermost.rs  messenger.rs  mumble.rs  nextcloud.rs  nostr.rs  ntfy.rs  pumble.rs  reddit.rs  revolt.rs  rocketchat.rs  router.rs  signal.rs  slack.rs  teams.rs  telegram.rs  threema.rs  twist.rs  twitch.rs  types.rs  viber.rs  (+5 more)
crates/clawreform-channels/tests/: bridge_integration_test.rs
crates/clawreform-cli/: Cargo.toml
crates/clawreform-cli/src/: bundled_agents.rs  dotenv.rs  launcher.rs  main.rs  mcp.rs  templates.rs  ui.rs
crates/clawreform-cli/src/tui/: chat_runner.rs  event.rs  mod.rs  theme.rs
crates/clawreform-cli/src/tui/screens/: agents.rs  audit.rs  chat.rs  dashboard.rs  extensions.rs  hands.rs  init_wizard.rs  logs.rs  memory.rs  peers.rs  sessions.rs  settings.rs  skills.rs  templates.rs  triggers.rs  usage.rs  welcome.rs  wizard.rs  workflows.rs
crates/clawreform-desktop/: Cargo.toml  tauri.conf.json
crates/clawreform-desktop/src/: commands.rs  lib.rs  main.rs  server.rs  shortcuts.rs  tray.rs  updater.rs
crates/clawreform-extensions/: Cargo.toml
crates/clawreform-extensions/src/: bundled.rs  credentials.rs  health.rs  installer.rs  lib.rs  oauth.rs  registry.rs  vault.rs
crates/clawreform-hands/: Cargo.toml
crates/clawreform-hands/src/: bundled.rs  lib.rs  registry.rs
crates/clawreform-kernel/: Cargo.toml
crates/clawreform-kernel/src/: approval.rs  auth.rs  auto_reply.rs  background.rs  capabilities.rs  config.rs  config_reload.rs  cron.rs  error.rs  event_bus.rs  heartbeat.rs  kernel.rs  lib.rs  metering.rs  pairing.rs  registry.rs  scheduler.rs  supervisor.rs  triggers.rs  whatsapp_gateway.rs  wizard.rs  workflow.rs
crates/clawreform-kernel/src/self_modify/: analyzer.rs  backup.rs  mod.rs  modifier.rs  types.rs  validate.rs
crates/clawreform-kernel/tests/: integration_test.rs  multi_agent_test.rs  wasm_agent_integration_test.rs  workflow_integration_test.rs
crates/clawreform-memory/: Cargo.toml
crates/clawreform-migrate/: Cargo.toml
crates/clawreform-migrate/src/: lib.rs  openclaw.rs  report.rs
crates/clawreform-runtime/: Cargo.toml
crates/clawreform-skills/: Cargo.toml
crates/clawreform-skills/bundled/self-modify/: SKILL.md  skill.toml
crates/clawreform-skills/src/: bundled.rs  clawhub.rs  lib.rs  marketplace.rs  openclaw_compat.rs  registry.rs
crates/clawreform-types/: Cargo.toml
crates/clawreform-wire/: Cargo.toml
deploy/: clawreform.service
docs/: README.md  agent-templates.md  agentdna-system.md  api-reference.md  architecture.md  channel-adapters.md  cli-reference.md  cli-swarm.md  configuration.md  desktop.md  devscribe-plan-review.md  getting-started.md  launch-roadmap.md  mcp-a2a.md  organ-system.md  production-checklist.md  providers.md  security.md  skill-development.md  troubleshooting.md  workflows.md
docs/design/: frontend-reset-plan.md  reference-shortlist.md  ui-baseline-pack.md
pitch-deck/: PRD.md  index.html  landing.html  stitch_blueprint.html
remotion-demo/: package-lock.json  package.json  tsconfig.json
remotion-demo/src/: Root.tsx  (+1 more)
scripts/: dashboard-proof.sh  record-demo.sh  record_demo.py
sota-fullstack-suite/: .gitignore  README.md  docker-compose.yml  package.json  tsconfig.json  turbo.json
xtask/: Cargo.toml
(+160 files in other folders)
