[package]
name = "clawreform-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket API server for the clawREFORM by aegntic.ai daemon"

[dependencies]
clawreform-types = { path = "../clawreform-types" }
clawreform-kernel = { path = "../clawreform-kernel" }
clawreform-runtime = { path = "../clawreform-runtime" }
clawreform-memory = { path = "../clawreform-memory" }
clawreform-channels = { path = "../clawreform-channels" }
clawreform-wire = { path = "../clawreform-wire" }
clawreform-skills = { path = "../clawreform-skills" }
clawreform-hands = { path = "../clawreform-hands" }
clawreform-extensions = { path = "../clawreform-extensions" }
clawreform-migrate = { path = "../clawreform-migrate" }
dashmap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
tokio-stream = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
