[package]
name = "clawreform-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel Bridge Layer (stub) — minimal types for compilation"

[dependencies]
clawreform-types = { path = "../clawreform-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
