[package]
name = "clawreform-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the clawREFORM by aegntic.ai"

[[bin]]
name = "clawreform"
path = "src/main.rs"

[dependencies]
clawreform-types = { path = "../clawreform-types" }
clawreform-kernel = { path = "../clawreform-kernel" }
clawreform-api = { path = "../clawreform-api" }
clawreform-migrate = { path = "../clawreform-migrate" }
clawreform-skills = { path = "../clawreform-skills" }
clawreform-extensions = { path = "../clawreform-extensions" }
zeroize = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
clawreform-runtime = { path = "../clawreform-runtime" }
uuid = { workspace = true }
ratatui = { workspace = true }
colored = { workspace = true }
