[package]
name = "clawreform-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native desktop application for the clawREFORM by aegntic.ai (Tauri 2.0)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
clawreform-kernel = { path = "../clawreform-kernel" }
clawreform-api = { path = "../clawreform-api" }
clawreform-types = { path = "../clawreform-types" }
tokio = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
toml = { workspace = true }
open = "5"

[features]
# Tauri uses custom-protocol in production builds
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "clawreform-desktop"
path = "src/main.rs"
