[package]
name = "clawreform-extensions"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Extension & integration system (stub) — minimal types for compilation"

[dependencies]
clawreform-types = { path = "../clawreform-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
zeroize = { workspace = true }
