[package]
name = "clawreform-hands"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hands system for OpenFang — curated autonomous capability packages"

[dependencies]
clawreform-types = { path = "../clawreform-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
