[package]
name = "clawreform-hands"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hands system (stub) — minimal types for compilation"

[dependencies]
clawreform-types = { path = "../clawreform-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
