[package]
name = "clawreform-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core kernel for the OpenFang Agent OS"

[dependencies]
clawreform-types = { path = "../clawreform-types" }
clawreform-memory = { path = "../clawreform-memory" }
clawreform-runtime = { path = "../clawreform-runtime" }
clawreform-skills = { path = "../clawreform-skills" }
clawreform-hands = { path = "../clawreform-hands" }
clawreform-extensions = { path = "../clawreform-extensions" }
clawreform-wire = { path = "../clawreform-wire" }
clawreform-channels = { path = "../clawreform-channels" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
cron = "0.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
